Minor updates to auto-alert UIX

--- a/src/sass/3/openeyes/components/pathstep/pathstep-btn/_i-icons.scss
+++ b/src/sass/3/openeyes/components/pathstep/pathstep-btn/_i-icons.scss
@@ -21,7 +21,7 @@
 			background-image: url( svg-themed('i/fork'));
 		}
 		&.i-redflag {
-			background-image: url( svg-all('i/flag-red'));
+			background-image: url( svg-themed('i/flag-red'));
 		}
 		&.i-arr {
 			background-image: url( svg-themed('i/direction-right'));
