Added in generic display classes

--- a/src/sass/3/base/_h5bp.scss
+++ b/src/sass/3/base/_h5bp.scss
@@ -61,6 +61,14 @@ textarea {
     display: none;
 }
 
+.display-block {
+	display: block;
+}
+
+.display-flex {
+	display: flex;
+}
+
 .invisible {
 	visibility: hidden;
 }
