--- a/src/sass/3/openeyes/ui/collapsible/collapse-data/__base.scss
+++ b/src/sass/3/openeyes/ui/collapsible/collapse-data/__base.scss
@@ -29,4 +29,9 @@
 // JS/DOM can override this with style="display:block"
 .collapse-data-content {
 	display: none;
+
+	&.expanded {
+		display:block;
+	}
+
 }
