PDF Creator POC

--- a/src/sass/3/openeyes/__all.scss
+++ b/src/sass/3/openeyes/__all.scss
@@ -100,6 +100,7 @@
 @import "components/audit";						// Audit
 @import "components/partial-booking/v1/partial-waiting"; // Partial Booking Waiting List (v1)
 @import "components/partial-booking/_all";      // Partial Booking Waiting List (v3+)
+@import "components/pdf-creator";               // PDF Creator
 @import "components/nod-export";				// NOD export
 @import "components/new-patient";				// Add New Patient
 @import "components/whiteboard/_all";			// Whiteboard
