--- a/src/sass/3/openeyes/__config-pro.scss
+++ b/src/sass/3/openeyes/__config-pro.scss
@@ -137,6 +137,8 @@ $oe-wait-red:			rgb(255,0,0);
 $oe-dark-bg-highlight: 	shade($oe-dark-blue-dark3,30); // used as hover highlight
 $oe-bg-highlight: 		$oe-dark-bg-highlight; // used as hover highlight
 $oe-tr-highlight:		rgb(10,16,26);
+$oe-tr-focus:           rgb(9, 14, 21);
+
 // colors 
 $oe-bg-hint-green:		rgb(18,60,31);
 $oe-bg-hint-red:		rgb(86,19,19);
