--- a/src/sass/3/openeyes/__config-pro.scss
+++ b/src/sass/3/openeyes/__config-pro.scss
@@ -54,6 +54,7 @@ $oe-grey:				$oe-dark-grey;
 
 $oe-dark-line: 			rgb(38,48,61);
 $oe-line:				$oe-dark-line; // don't use alphas, tables with td colspan 2 overlap
+$oe-line-hard: hsl(214, 23%, 30%);
 
 // key focus outline
 $oe-key-focus-outline: rgb(9, 108, 154);
