--- a/src/sass/3/openeyes/_icons.scss
+++ b/src/sass/3/openeyes/_icons.scss
@@ -182,6 +182,7 @@
 		"eye": "eye",
 		"eye-circle": "eye-circle",
 		"comments": "comments",
+		"comments-clear": "comments-clear",
 		"comments-added": "comments-added",
 		"comments-who": "comments-who",
 		"start": "start",
