--- a/src/sass/3/openeyes/components/sem/elements/specific/_diagnosis-mgmt.scss
+++ b/src/sass/3/openeyes/components/sem/elements/specific/_diagnosis-mgmt.scss
@@ -7,6 +7,17 @@
 
 	// table.diagnoses table hook if it should be needed
 
+	table.diagnoses {
+		td {
+			height: auto;
+			padding: 4px 0 4px 4px;
+
+			&:first-child {
+				padding-left: 1px; // match the default for all other TDs
+			}
+		}
+	}
+
 	// <td> 1st column - diag (name and lat)
 	// <td> 2nd column - diagnosis-mgmt (wrapper)
 	// <td> 3rd column - actions
@@ -62,20 +73,18 @@
 			flex: 1 1 0;
 			display: grid;
 			grid: 24px 1fr / 1fr 1fr 28px;
-			gap:2px;
 
 			margin:0 5px 0 0;
 
 			.status-notes {
 				grid-column: auto / span 3;
+				padding:5px 0;
 				textarea {
 					width: 100%;
 				}
 			}
 
-
 		}
-
 
 		.diag-state,
 		.state-change,
