Updates for Diag2 UIX chagnes

--- a/src/sass/3/openeyes/components/sem/elements/_tables.scss
+++ b/src/sass/3/openeyes/components/sem/elements/_tables.scss
@@ -115,13 +115,18 @@
 		&.rows-focus {
 			tbody {
 				tr {
-					border-bottom:1px solid $oe-line;
+					&:last-child {
+						// without this, get a pixel jump
+						border-bottom:1px solid transparent;
+					}
 
 					&:hover,
 					&:focus-within {
 						background-color: $oe-tr-focus;
-						border-bottom-color:$oe-line-hard;
+						border-bottom:1px solid $oe-line-hard;
 					}
+
+
 				}
 			}
 		}
