--- a/src/sass/3/openeyes/_icons.scss
+++ b/src/sass/3/openeyes/_icons.scss
@@ -235,6 +235,7 @@
 		"letter-GP": "letter-GP",
 		"no-permissions": "no-permissions",
 		"waiting": "waiting",
+		"more-v": "more-v",
 		"more-h": "more-h",
 		"more-h-orange": "more-h-orange",
 		"status-urgent": "status-urgent",
@@ -334,7 +335,7 @@
 
 	// icons used in the "dark" frame area (need to be fixed to use the "dark" icon set)
 	// note: use the class name NOT the SVG name!
-	$used-in-frame: "laterality.R", "laterality.L", "laterality.NA", "laterality.Ri", "laterality.Li", "lat-R", "lat-L", "lat-n", "lat-Ri", "lat-Li", "beo", "d-slash", "line-break", "direction-right", "direction-right-circle", "person", "comments", "comments-added", "comments-who", "info", "child-arrow", "parent-arrow", "top", "audit-trail", "drug-rx", "remove-circle", "plus-circle", "pencil", "save", "more-h", "menu", "change", "injection","doubt","range","expand","collapse","formulary";
+	$used-in-frame: "laterality.R", "laterality.L", "laterality.NA", "laterality.Ri", "laterality.Li", "lat-R", "lat-L", "lat-n", "lat-Ri", "lat-Li", "beo", "d-slash", "line-break", "direction-right", "direction-right-circle", "person", "comments", "comments-added", "comments-who", "info", "child-arrow", "parent-arrow", "top", "audit-trail", "drug-rx", "remove-circle", "plus-circle", "pencil", "save", "more-h", "more-v", "menu", "change", "injection","doubt","range","expand","collapse","formulary";
 
 	// these icons need to always be at full opacity by default
 	$no-opacity: "laterality.R", "laterality.L", "laterality.NA", "lat-R", "lat-L", "lat-n", "lat-Ri", "lat-Li", "beo", "doubt-active", "circle-green", "circle-yellow", "circle-amber", "circle-orange", "circle-red", "circle-grey", "flag-green", "flag-amber", "flag-orange", "flag-red", "flag-grey", "triangle-green", "triangle-amber", "triangle-orange", "triangle-red", "triangle-grey", "triangle-urgent", "mpr", "mpr-red", "mpr-orange", "mpr-amber", "mpr-green", "exclamation-green", "exclamation-amber", "exclamation-orange", "exclamation-red", "tick-green", "cross-red", "warning", "warning-none",
