new icons, highlighter updates, v-bars, oe-lat

--- a/src/sass/3/openeyes/_icons.scss
+++ b/src/sass/3/openeyes/_icons.scss
@@ -319,6 +319,7 @@
 		"a11ty-green":"a11ty-green",
 		"a11ty-orange":"a11ty-orange",
 		"a11ty-red":"a11ty-red",
+		"interval":"interval",
 	);
 
 	$eyedraw_icons: (
