--- a/src/sass/3/openeyes/components/sem/elements/specific/_diagnosis-mgmt.scss
+++ b/src/sass/3/openeyes/components/sem/elements/specific/_diagnosis-mgmt.scss
@@ -63,7 +63,7 @@
 
 			.right {
 				// match the line-l on the table
-				border-right: 2px solid $oe-line;
+				border-right: 2px dotted $oe-line;
 				// balance out the R/L sides
 				padding:0 1px 0 0;
 			}
