--- a/src/sass/3/openeyes/ui/oe-lat-icons/_oe-lat.scss
+++ b/src/sass/3/openeyes/ui/oe-lat-icons/_oe-lat.scss
@@ -132,13 +132,29 @@
 
 	// qualifier flags!
 	position: relative;
-	
+
 	&.qL {
 		&::after {
 			content: "";
+			z-index: 1;
 			position: absolute;
 			top: -2px;
 			right: -1px;
+			width: 6px;
+			height: 6px;
+			border-radius: 50%;
+			border:1px solid $oe-alert-orange;
+			background: $oe-highlighter;
+		}
+	}
+
+	&.qR {
+		&::before {
+			content: "";
+			z-index: 1;
+			position: absolute;
+			top: -2px;
+			left: -2px;
 			width: 6px;
 			height: 6px;
 			border-radius: 50%;
