--- a/src/sass/3/openeyes/components/sem/elements/__all.scss
+++ b/src/sass/3/openeyes/components/sem/elements/__all.scss
@@ -42,7 +42,7 @@
 @import "specific/botox/_all";  // injection management
 @import "specific/attachments";
 @import "specific/question-answer";
-@import "specific/diagnosis-mgmt";
+@import "specific/diagnosis-mgmt/_all";
 @import "specific/message";
 
 // IDG concept work
