ED3 overlay concept

--- a/src/sass/3/openeyes/components/popups/_table.scss
+++ b/src/sass/3/openeyes/components/popups/_table.scss
@@ -27,6 +27,16 @@
 				}
 			}
 		}
+
+		&.all-eq {
+			tbody {
+				td, th {
+					&:last-child {
+						padding:8px 8px 8px 4px;
+					}
+				}
+			}
+		}
 		
 		thead {
 			th {
