Updates for Diag2 work

--- a/src/sass/3/openeyes/components/sem/elements/specific/diagnosis-mgmt/__base.scss
+++ b/src/sass/3/openeyes/components/sem/elements/specific/diagnosis-mgmt/__base.scss
@@ -29,5 +29,11 @@
 
 	&.sys {
 		justify-content: center;
+
+		.unsided {
+			flex: 1 1 0;
+			@include flex(flex-start, space-between);
+			max-width: 400px;
+		}
 	}
 }
