--- a/src/sass/3/openeyes/components/popups/add-new-event/v1/_oe-event-type.scss
+++ b/src/sass/3/openeyes/components/popups/add-new-event/v1/_oe-event-type.scss
@@ -5,10 +5,10 @@
 .step-event-types {
 
 	// split events <ul> into 2 columns
-	.event-type-list {
-		column-count: 2;
-		column-gap: 10px;
-	}
+	//.event-type-list {
+	//	column-count: 2;
+	//	column-gap: 10px;
+	//}
 
 	// <li>
 	.oe-event-type {
