new word-break helper class

--- a/src/sass/3/openeyes/_icons.scss
+++ b/src/sass/3/openeyes/_icons.scss
@@ -226,6 +226,7 @@
 		"drop": "drop",
 		"drop-done": "drop-done",
 		"star": "star",
+		"star-blue": "star-blue",
 		"starline": "starline",
 		"flag": "flag",
 		"flagline": "flagline",
