--- a/src/sass/3/openeyes/ui/_spinner.scss
+++ b/src/sass/3/openeyes/ui/_spinner.scss
@@ -44,8 +44,8 @@
   &.as-icon {
 	 display:inline-block;
 	 position:relative;
-	 width: $spinner-icon;
-	 height: $spinner-icon;
+	 width: 19px;
+	 height: 19px;
 	 margin:0 5px;
 	 vertical-align: middle;
 	 
