--- a/src/sass/3/openeyes/ui/add-select-search/_add-options.scss
+++ b/src/sass/3/openeyes/ui/add-select-search/_add-options.scss
@@ -44,7 +44,7 @@
 			.restrict-width {
 				display:inline-block;
 				width:$oe-ass-restricted-width; 
-				word-break: break-all;
+				overflow-wrap: break-word;
 			
 				&.extended {
 					width:$oe-ass-restricted-width-extended;
