--- a/src/sass/3/print/sem/elements/_eyedraw.scss
+++ b/src/sass/3/print/sem/elements/_eyedraw.scss
@@ -12,7 +12,7 @@
 		&.stack {
 			width:240px;
 			font-size:$fontsize-small - 1;
-			word-break: break-all;
+			overflow-wrap: break-word;
 		}
 	}	
 		
