CSS print form.io updates

--- a/src/sass/3/print/sem/_elements.scss
+++ b/src/sass/3/print/sem/_elements.scss
@@ -3,7 +3,7 @@
 
 
 // Element CSS for printing
-// simplified verions of the View CSS
+// simplified versions of the View CSS
 
 @import "elements/element";
 @import "elements/element-header";
