--- a/src/sass/3/style_oe_dark.3.scss
+++ b/src/sass/3/style_oe_dark.3.scss
@@ -27,3 +27,4 @@
 /* ------ 3rd party ------- */
 /* Pick me up */
 @import "pickmeup/pickmeup";    					// js calendar date picker
+@import "formio/formbuilder";                       // OE Admin
