New eyedraw icons: GeographicAdvanced and NFLHaemorrhage

--- a/src/sass/3/openeyes/components/clinic/worklists-panel/_list-view.scss
+++ b/src/sass/3/openeyes/components/clinic/worklists-panel/_list-view.scss
@@ -5,14 +5,19 @@
 .oe-worklists-panel {
 	// after filtering and loading still need a way to quickly flick
 	// between lists (IF there is more that one)
-	.list-view {	
-		// all button
+	.list-view {
+		margin:0 10px 0 0;
+
+		// "All" lists button
 		button {
 			justify-content: flex-start;
 			padding:5px 10px;
 		}
 			
 		.worklists {
+			max-height: 200px;
+			overflow-y: auto;
+
 			fieldset {
 				background: $oe-btn-default;
 				
