--- a/src/sass/3/openeyes/ui/_oe-user-pin.scss
+++ b/src/sass/3/openeyes/ui/_oe-user-pin.scss
@@ -18,7 +18,8 @@
 		background-color: $oe-step-green;
 	}
 
-	&.wrong-pin {
+	&.wrong-pin,
+	&.declined-pin {
 		background-color:$oe-step-red;
 	}
 	
