ED icon: LidLesion renamed to LidMass

--- a/src/sass/spritesheet/_eyedraw-doodle-sprites.scss
+++ b/src/sass/spritesheet/_eyedraw-doodle-sprites.scss
@@ -654,7 +654,7 @@ background-position: 0px -320px;
 background-size: 256px 256px;
 background-position: 0px -160px;
 }}
-.icon-ed-LidLesion {
+.icon-ed-LidMass {
 background-position: -32px -320px;
 &.small {
 background-size: 256px 256px;
